# web-poet

./: .bumpversion.cfg  .codecov.yml  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CHANGES.rst  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.rst  LICENSE  MAINTAINING.rst  MANIFEST.in  README.md  README.rst  example.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml  tests-ubuntu.yml  tests-windows.yml
core_po/: builder.py  mixins.py  objects.py  page_inputs.py  pages.py  providers.py  responses.py
docs/: CMakeLists.txt  api-reference.rst  api_reference.rst  conf.py  contributing.rst  framework.rst  index.rst  requirements.in  requirements.txt  simple-framework.rst
docs/advanced/: additional-requests.rst  additional_requests.rst  fields.rst  meta.rst  page-params.rst  retries.rst
docs/frameworks/: additional-requests.rst  index.rst  retries.rst  rules.rst  stats.rst
docs/intro/: ai.rst  from-ground-up.rst  install.rst  overrides.rst  overview.rst  pop.rst  rules.rst  tutorial.rst
docs/page-objects/: additional-requests.rst  fields.rst  frameworks.rst  index.rst  input-validation.rst  inputs.rst  items.rst  layouts.rst  page-params.rst  page.py  register.py  retries.rst  rules.rst  stats.rst  testing.rst
docs/page-objects/code-examples/: attrs.py  browserpage.py  itempage.py  layouts.py  raw-create.py  register.py  webpage.py
docs/tutorial-project/: run.py  run_categorized.py  run_params.py
docs/tutorial-project/tutorial/: items.py
docs/tutorial-project/tutorial/pages/: books_toscrape_com.py
tests/: conftest.py  test_annotations.py  test_builder.py  test_decorators.py  test_example.py  test_exceptions.py  test_extras.py  test_fields.py  test_framework.py  test_input_validation.py  test_layouts.py  test_mixins.py  test_multilayout.py  test_objects.py  test_overrides.py  test_page_inputs.py  test_pages.py  test_pop.py  test_requests.py  test_responses.py  test_rules.py  test_serialization.py  test_stats.py  test_testing.py  test_testing_pytest.py  test_url.py  test_utils.py
tests/fixtures/: books_list.html
tests/po_lib/: __init__.py  a_module.py
tests/po_lib/nested_package/: __init__.py  a_nested_module.py
tests/po_lib_data_type/: __init__.py
tests/po_lib_sub/: __init__.py
tests/po_lib_to_return/: __init__.py
tests/po_sub_lib/: __init__.py
tests_extra/: __init__.py
tests_extra/po_lib_sub_not_imported/: __init__.py
tests_pop/base_A_package/: __init__.py  site_1.py  site_2.py
tests_pop/base_B_package/: base.py  site_2.py  site_3.py
tests_pop/combine_A_B_package/: __init__.py  base_A_package
tests_pop/combine_A_B_subset_package/: __init__.py  base_B_package  improved_A_package
tests_pop/improved_A_package/: site_1.py
tests_typing/: test_fields.mypy-testing  test_item_page.mypy-testing  test_utils.mypy-testing
tutorial-project/: run.py
web_poet/: .overrides.py.swp  __init__.py  __main__.py  _base.py  _layouts.py  _typing.py  annotated.py  example.py  exceptions.py  fields.py  functional.py  meta.py  mixins.py  overrides.py  page_inputs.py  pages.py  requests.py  rules.py  utils.py
web_poet/exceptions/: __init__.py  core.py  http.py
web_poet/framework/: __init__.py  _api.py  _providers.py
web_poet/page_inputs/: __init__.py  annotated.py  browser.py  client.py  fetcher.py  http.py  meta.py  page_params.py  response.py  stats.py  url.py
web_poet/serialization/: __init__.py  api.py  dummies.py  functions.py  utils.py
web_poet/simple_framework/: __init__.py  _api.py  _providers.py
web_poet/testing/: __init__.py  __main__.py  exceptions.py  fixture.py  itemadapter.py  pytest.py  utils.py
